Wed Jun 30 13:01:44 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/ami4ccm/tests/IDL_Test/Hello_Component.mpc:
        * connectors/ami4ccm/tests/SimplexMulti/Sender/UsesSM_Sender.mpc:
        * connectors/ami4ccm/tests/UsesMulti/Sender/UsesMulti_Sender.mpc:
          Fixed msvc71 link errors

Wed Jun 30 12:08:56 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * docs/OMG-CCM-Tutorial.pptx:
          Updates regarding the DDS4CCM connector. Since the Hello example
          was old, I've re-constructed these sheets using the current status.

Wed Jun 30 11:35:20 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tutorials/Quoter/Simple/Broker/StockBrokerDriver.cpp:
          Warning.

Wed Jun 30 10:35:10 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/tutorials/Hello/Tutorial/01_general.html
        * connectors/ami4ccm/tutorials/Hello/Tutorial/02_idl.html
        * connectors/ami4ccm/tutorials/Hello/Tutorial/03_executors.html
        * connectors/ami4ccm/tutorials/Hello/Tutorial/04_ami4ccm.html
        * connectors/ami4ccm/tutorials/Hello/Tutorial/05_compilation.html
         Changes after review.

Wed Jun 30 09:20:10 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp:
          Cosmetic logging change.

        * DAnCE/LocalityManager/Handler/LocalityActivator_Impl.h:
          Fixed incorrect Compare functor for server registry set.

Wed Jun 30 06:04:09 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tutorials/Shapes/Tutorial/01_general.html:
        * connectors/dds4ccm/tutorials/Shapes/Tutorial/02_idl.html:
        * connectors/dds4ccm/tutorials/Shapes/Tutorial/04_dds4ccm.html:
          Changes after review.

Tue Jun 29 17:54:23 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Handler/LocalityActivator_Impl.h: